# SimpleAckerman4WD

./: README.md
osiris_bot/: CMakeLists.txt  package.xml
osiris_bot/config/: ign_ros_bridge.yaml
osiris_bot/include/osiris_bot/: obstacle_detect.hpp
osiris_bot/launch/: bot_gazebo.launch.py
osiris_bot/src/: obstacle_detect.cpp  obstacle_detect_main.cpp
osiris_bot/urdf/: mybot.gazebo  mybot.xacro
osiris_bot/worlds/: brick_world.world  empty_world.sdf  wall_world.sdf
osiris_commander/: package.xml  setup.cfg  setup.py
osiris_commander/osiris_commander/: bot_commander.py
simple_ackerman_controller/: CMakeLists.txt  package.xml  simple_ackerman_controller_plugin.xml
simple_ackerman_controller/config/: bot_ros2_controller.yaml
simple_ackerman_controller/include/simple_ackerman_controller/: simple_ackerman_controller.hpp
simple_ackerman_controller/launch/: ackerman_test.launch.py
simple_ackerman_controller/src/: ackerman_main.cpp  simple_ackerman_controller.cpp
